--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,7 +18,7 @@
       <h1 class="header-title">Order Flow</h1>
     </div>
     <div class="header-icons">
-      <a href="/delivery" class="icon-link">
+      <a href="/orders" class="icon-link">
         <i class="bi fa-brands fa-jedi-order"></i>
       </a>
       <a href="/cart" class="icon-link">
