--- a/src/main/resources/templates/cart/cart.html
+++ b/src/main/resources/templates/cart/cart.html
@@ -36,8 +36,8 @@
 
         <!-- Empty Cart -->
         <div th:if="${cart.items.isEmpty()}" class="empty-cart text-center">
-          <p class="empty-cart-message text-gray-700 mb-4">Ваш кошик порожній</p>
-          <a href="/" class="checkout-btn bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Продовжити
+          <p class=" text-black mb-4 " style="font-size: xx-large ">Ваш кошик порожній</p>
+          <a href="/" class="btn btn-outline-dark px-4 py-2 rounded hover:bg-blue-600">Продовжити
             покупки</a>
         </div>
 
