--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -10,7 +10,7 @@
   <div class="footer-content">
     <nav class="footer-nav">
       <a href="/about">ПРО НАС</a>
-      <a href="/order-flow" class="brand-link">Order Flow</a>
+      <a href="/" class="brand-link">Order Flow</a>
       <a href="/contact">КОНТАКТИ</a>
     </nav>
 
