--- a/src/main/resources/templates/user/edit-profile.html
+++ b/src/main/resources/templates/user/edit-profile.html
@@ -36,34 +36,38 @@
                  placeholder="0991234567" class="form-control">
         </div>
         <h3 class="mt-4">Адреса доставки</h3>
-        <div class="form-group">
-          <label for="region">Область:</label>
-          <input type="text" id="region" name="address.region" th:value="${userDetails.address?.region}"
-                 class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="city">Місто:</label>
-          <input type="text" id="city" name="address.city" th:value="${userDetails.address?.city}" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="area">Район:</label>
-          <input type="text" id="area" name="address.area" th:value="${userDetails.address?.area}" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="street">Вулиця:</label>
-          <input type="text" id="street" name="address.street" th:value="${userDetails.address?.street}"
-                 class="form-control">
-        </div>
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="house">Будинок:</label>
-            <input type="text" id="house" name="address.house" th:value="${userDetails.address?.house}"
+        <div class="address-fields">
+          <div class="form-group">
+            <label for="region">Область:</label>
+            <input type="text" id="region" name="address.region" th:value="${userDetails.address?.region}"
                    class="form-control">
           </div>
-          <div class="form-group col-md-6">
-            <label for="apartment">Квартира:</label>
-            <input type="text" id="apartment" name="address.apartment" th:value="${userDetails.address?.apartment}"
+          <div class="form-group">
+            <label for="city">Місто:</label>
+            <input type="text" id="city" name="address.city" th:value="${userDetails.address?.city}"
                    class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="area">Район:</label>
+            <input type="text" id="area" name="address.area" th:value="${userDetails.address?.area}"
+                   class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="street">Вулиця:</label>
+            <input type="text" id="street" name="address.street" th:value="${userDetails.address?.street}"
+                   class="form-control">
+          </div>
+          <div class="form-row">
+            <div class="form-group">
+              <label for="house">Будинок:</label>
+              <input type="text" id="house" name="address.house" th:value="${userDetails.address?.house}"
+                     class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="apartment">Квартира:</label>
+              <input type="text" id="apartment" name="address.apartment" th:value="${userDetails.address?.apartment}"
+                     class="form-control">
+            </div>
           </div>
         </div>
 
