--- a/src/main/resources/templates/orders/details.html
+++ b/src/main/resources/templates/orders/details.html
@@ -47,6 +47,13 @@
     <button type="submit" class="btn-payment">Оплатити замовлення</button>
   </form>
 
+  <a th:href="@{/orders/{id}/download-invoice(id=${order.id})}"
+     class="btn-download"
+     target="_blank">
+    Завантажити pdf замовлення
+  </a>
+
+
   <div>
     <form th:action="@{/orders/{id}/cancel(id=${order.id})}" method="post"
           th:if="${order.status.name() == 'NEW' || order.status.name() == 'PROCESSING'}">
