--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -93,7 +93,7 @@ body, html {
   padding: 0 20px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
   gap: 30px;
 }
 
@@ -165,9 +165,7 @@ body, html {
 
 .search-container {
   position: relative;
-  display: inline-block;
-  margin-top: 9px;
-
+  display: flex;
 }
 
 .search-input {
@@ -209,9 +207,10 @@ body, html {
   color: #666;
 }
 
-.search-button {
-  position: absolute;
-  right: 1px;
+.search-container .search-button {
+  position: static;
+  transform: translateX(-29px);
+  right: 10px;
   bottom: 3px;
   background: none;
   border: none;
@@ -225,7 +224,7 @@ body, html {
 }
 
 .search-container:hover .search-button {
-  transform: translateY(-3px);
+  transform: translateX(-35px);
 }
 
 .header-title {
@@ -325,6 +324,21 @@ body, html {
 .search-item-price {
   font-size: 12px;
   color: #666;
+}
+
+.no-results-message,
+.error-message {
+  padding: 10px;
+  text-align: center;
+  color: #666;
+  font-size: 14px;
+  background-color: #f8f8f8;
+  border-radius: 5px;
+  margin: 10px 0;
+}
+
+.error-message {
+  color: #dc3545;
 }
 
 @media (max-width: 768px) {
