--- a/src/main/resources/templates/about-contact/about.html
+++ b/src/main/resources/templates/about-contact/about.html
@@ -22,8 +22,8 @@
         <li><strong>Грабівчук Іван</strong> (Фронтенд частина)</li>
         <li><strong>Данилюк Олександр</strong> (Реалізація логіки кошика та замовлення товарів)</li>
         <li><strong>Калин Роман</strong> (Дизайнер)</li>
-        <li><strong>Костюк Іван</strong> (Колектор\Презентаційороб)</li>
-        <li><strong>Головко Володимир</strong> (Талісман команди)</li>
+        <li><strong>Костюк Іван</strong> (Черлідер)</li>
+        <li><strong>Головко Володимир</strong> (<em>Хто це?</em>)</li>
       </ul>
 
       <p>При розробці сайту використовувались такі технології як: Java Spring Boot, Thymeleaf, HTML, CSS,
