--- a/src/main/resources/templates/user/edit-profile.html
+++ b/src/main/resources/templates/user/edit-profile.html
@@ -7,6 +7,7 @@
 <div class="page-wrapper">
   <div class="background-wrapper">
     <div class="cityscape"></div>
+    <div class="cityscape-revers"></div>
     <div class="smoke-effect"></div>
   </div>
 
